# HFlow

./: ..gitignore.swp  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
docker-dev/: Dockerfile
include/rhea/: rhea.h
include/rhea/byte_flow_regulator/: byte_flow_regulator_client.h  client.h  server.h
include/rhea/client/: ByteFlow_Regulator_Client.h  client.h
include/rhea/client_service/: rhea_client.h
include/rhea/common/: configuration_manager.h  data_structures.h  enumerations.h  typedefs.h
include/rhea/server/: ByteFlow_Regulator_Server.h  byte_flow_regulator_server.h
old/: CMakeLists.txt  servers.txt
old/Daemon/: CMakeLists.txt
old/Daemon/include/: Daemon.h
old/Daemon/src/: Daemon.cpp
old/JobManager/: CMakeLists.txt  main.cpp
old/JobManager/include/client/: Client.h
old/JobManager/include/dataStructures/: ClusterConfig.h  ClusterNode.h  Job.h  JobNode.h  OperationType.h  ResourceReport.h
old/JobManager/include/server/: FunctionManager.h  Server.h
old/JobManager/src/client/: Client.cpp
old/JobManager/src/server/: FunctionManager.cpp  Server.cpp
old/JobUtils/: CMakeLists.txt
old/JobUtils/include/common/: Action.h  TaskLocation.h  Timer.h
old/JobUtils/include/events/: Event.h
old/JobUtils/include/tasks/: AggregateTask.h  KeyByTask.h  SinkTask.h  SourceTask.h  Task.h
old/JobUtils/src/tasks/: AggregateTask.cpp  KeyByTask.cpp  SinkTask.cpp  SourceTask.cpp
old/TaskManager/: CMakeLists.txt  main.cpp
old/TaskManager/include/client/: Client.h
old/TaskManager/include/server/: Server.h  TaskExecutor.h
old/TaskManager/src/client/: Client.cpp
old/TaskManager/src/server/: Server.cpp  TaskExecutor.cpp
old/User/: driverProgram.cpp
old/basketCommon/: CMakeLists.txt
old/basketCommon/include/basket/: configuration_manager.h  daemonize.h  data_structure.h
old/conf/: hostfile
old/discarded/: ResourceManager.cpp  ResourceManager.h  TaskManager.cpp
old/queue/: CMakeLists.txt
old/queue/include/client/: client.h
old/queue/include/server/: server.h
old/queue/src/client/: client.cpp
old/queue/src/server/: mainEvent.cpp  mainTask.cpp  server.cpp
rhea_job/: CMakeLists.txt
rhea_job/include/rhea_job/common/: rhea_job.h
rhea_job/src/: rhea_job.cpp
scripts/: execute_worker_manager.sh
scripts/ares/: ares.conf  byteflow_regulator  client_hostfile  client_service  job_manager  worker_manager
scripts/local/: base.conf  client_service  job_manager  local.conf  worker_manager
src/rhea/byte_flow_regulator/: byte_flow_regulator_client.cpp  client.cpp  main.cpp  server.cpp
src/rhea/client/: ByteFlow_Regulator_Client.cpp  client.cpp  client.h
src/rhea/client_service/: main.cpp  rhea_client.cpp
src/rhea/common/: data_structures.cpp
src/rhea/lib/: rhea.cpp
src/rhea/server/: ByteFlow_Regulator_Server.cpp  Server.cpp  byte_flow_regulator_server.cpp  client.cpp  client.h  main.cpp  server.h
test/: CMakeLists.txt  main.cpp  multi_read.cpp
test/integration/: CMakeLists.txt
test/integration/byte_flow_regulator/: test.cpp  test_decision.cpp
test/integration/job_manager/: test.cpp
test/integration/multi_write/: test.cpp
test/integration/old/: main.cpp
test/integration/real_apps/: test1.cpp  test2.cpp  test3.cpp
test/integration/rhea/: test.cpp  test_collectors.cpp
test/integration/rhea_client_test/: test.cpp
test/integration/single_write/: test.cpp
test/integration/writeIO/: test.cpp
test/unit/: CMakeLists.txt
test/unit/byteflow_regulator_client/: test.cpp
test/unit/byteflow_regulator_server/: test.cpp
worker_manager/: CMakeLists.txt
worker_manager/client/: CMakeLists.txt
worker_manager/client/include/worker_manager/: worker_manager_client.h
worker_manager/server/: CMakeLists.txt
worker_manager/server/include/worker_manager/: thread_pool.h  worker_manager_server.h
